# ensobench

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
crates/evaluator/: Cargo.toml
crates/evaluator/src/: cli.rs  config.rs  lc_verify.rs  lib.rs  main.rs  model.rs  parse.rs  score.rs
crates/evaluator/tests/: smoke.rs
crates/hian-gen/: Cargo.toml
crates/hian-gen/src/: ground_truth.rs  lib.rs  main.rs  make_prompt.rs
crates/runner/: Cargo.toml
crates/runner/src/: artifacts.rs  config.rs  enso_client.rs  error.rs  lib.rs  main.rs
crates/runner/src/agents/: core_bundle.rs  core_route.rs  llm_core.rs  llm_hian.rs  mod.rs
crates/runner/src/txexec/: anvil.rs  mod.rs  tenderly.rs
dataset/: domains.enso.yaml
dataset/coverage/: r1_usdc_weth_route.yaml  r2_usdc_weth_aave_bundle.yaml  r3_cross_chain_bridge.yaml  r4_borrow_repay.yaml
dataset/lc/bridge_usdc_op/: ground_truth.json  meta.json  prompt.txt
dataset/lc/swap_usdc_weth/: ground_truth.json  meta.json  prompt.txt
docs/: INTRODUCING_ENSO.md  SPEC.md  TECH_PLAN.md  TODO.md
docs/examples/core_route/: meta.json  per_tx.jsonl  trajectory.jsonl
frontend/enso-bench-site/: index.html  lc.html  trajectories.html
frontend/enso-bench-site/assets/: app.js  lc.js  style.css  trajectories.js  utils.js
frontend/enso-bench-site/data/: content.json  models.json
frontend/enso-bench-site/data/samples/coverage/20250131-claude-opus-4-1/: eval_per_tx.jsonl  eval_score.json  meta.json  per_tx.jsonl
frontend/enso-bench-site/data/samples/coverage/20250131-gemini-25-pro/: eval_per_tx.jsonl  eval_score.json  meta.json  per_tx.jsonl
frontend/enso-bench-site/data/samples/coverage/20250131-gpt-5-high/: eval_per_tx.jsonl
frontend/enso-bench-site/data/samples/coverage/20250131-gpt-oss-20b/: eval_per_tx.jsonl  eval_score.json  meta.json  per_tx.jsonl
frontend/enso-bench-site/data/samples/coverage/20250131-naver-hyperclova-thinking/: eval_per_tx.jsonl  eval_score.json  meta.json  per_tx.jsonl
frontend/enso-bench-site/data/samples/coverage/20250926-gpt-5-high/: eval_score.json
frontend/enso-bench-site/data/samples/needle/20250131-claude-opus-4-1-needle/: eval_needle.json  eval_per_tx.jsonl  eval_score.json  meta.json  per_tx.jsonl
frontend/enso-bench-site/data/samples/needle/20250131-gemini-25-pro-needle/: eval_needle.json  eval_per_tx.jsonl  eval_score.json  meta.json  per_tx.jsonl
frontend/enso-bench-site/data/samples/needle/20250131-gpt-5-high-needle/: eval_needle.json  eval_per_tx.jsonl  eval_score.json  (+2 more)
runs/20250926T064420Z-mock/: meta.json  trajectory.jsonl
runs/20250926T064646Z-mock/: trajectory.jsonl
runs/20250926T065457Z-demo/: trajectory.jsonl
runs/20250926T065709Z-demo/: trajectory.jsonl
runs/20250926T065808Z-demo/: trajectory.jsonl
runs/20250926T065842Z-demo/: trajectory.jsonl
runs/20250926T065903-20250926T065842Z-demo-llm/: meta.json  trajectory.jsonl
runs/20250926T070007Z-demo/: per_tx.jsonl  trajectory.jsonl
runs/20250926T070028-20250926T070007Z-demo-llm/: meta.json  trajectory.jsonl
runs/20250926T070323Z-demo/: per_tx.jsonl  trajectory.jsonl
runs/20250926T070633Z-demo/: per_tx.jsonl  trajectory.jsonl
scripts/: demo_eval.sh  demo_run.sh
(+10 files in other folders)
