[package]
name = "ensobench-evaluator"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
description = "Coverage and LC scoring utilities for EnsoBench"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
indexmap.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
regex.workspace = true
primitive-types.workspace = true

[dev-dependencies]
assert_matches = "1"
serde_json.workspace = true
