[package]
name = "ensobench-hian-gen"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
description = "Haystack-in-a-needle prompt generator for EnsoBench"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
rand.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
serde_json.workspace = true
