[package]
name = "ensobench-runner"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
description = "Executable agent runner for EnsoBench"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
once_cell.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
indexmap.workspace = true
rand.workspace = true
regex.workspace = true
hex.workspace = true
async-openai = { version = "0.26", optional = true }
primitive-types.workspace = true

[features]
default = ["http"]
http = []
openrouter = ["async-openai"]

[dev-dependencies]
serde_json.workspace = true
